<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>emcl2_ros2</name>
  <version>0.0.0</version>
  <description>emcl2 (for ROS2)</description>
  <maintainer email="ryuichiueda@gmail.com">ueda</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
